feat: added rabbitmq
This is not that well made. But it works

--- a/School.Project.Systems.Services.Registry/appsettings.json
+++ b/School.Project.Systems.Services.Registry/appsettings.json
@@ -41,5 +41,10 @@
       }
     }
   },
+  "RabbitMQ":{
+    "Host": "localhost",
+    "User": "Greboh",
+    "Password": "Test-1234"
+  },
   "AllowedHosts": "*"
 }
